--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -223,6 +223,8 @@ a {
 .site-footer {
   padding-top: 2rem;
   margin-top: 2rem;
+  background: #333;
+  color: #fff;
   border-top: solid 1px #eff0f1; }
 
 .site-footer-owner {
