--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -236,7 +236,12 @@ a {
 
 @media screen and (min-width: 64em) {
   .site-footer {
-    font-size: 1rem; } }
+    font-size: 1rem; } 
+  .site-footer {
+    padding: 2rem 10%;
+     }
+  
+}
 
 @media screen and (min-width: 42em) and (max-width: 64em) {
   .site-footer {
