--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -237,10 +237,6 @@ a {
 @media screen and (min-width: 64em) {
   .site-footer {
     font-size: 1rem; } 
-  .site-footer {
-    padding: 2rem 10%;
-     }
-  
 }
 
 @media screen and (min-width: 42em) and (max-width: 64em) {
@@ -249,4 +245,8 @@ a {
 
 @media screen and (max-width: 42em) {
   .site-footer {
-    font-size: 0.9rem; } }
+    font-size: 0.9rem; } 
+   .site-footer {
+    padding: 2rem 10%;
+     }
+}
