--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -236,17 +236,20 @@ a {
 
 @media screen and (min-width: 64em) {
   .site-footer {
-    font-size: 1rem; } 
+    font-size: 1rem;
+     padding: 2rem 10%;
+    } 
 }
 
 @media screen and (min-width: 42em) and (max-width: 64em) {
   .site-footer {
-    font-size: 1rem; } }
+    font-size: 1rem; 
+    padding: 2rem 10%;
+  } }
 
 @media screen and (max-width: 42em) {
   .site-footer {
-    font-size: 0.9rem; } 
-   .site-footer {
+    font-size: 0.9rem;
     padding: 2rem 10%;
      }
 }
